plugins/rhizomedb/testData/firMembers/entityType/withoutCompanion/generateWithNonMixin.kt
// File generated by `org.jetbrains.rhizomedb.TestGeneratorKt`. DO NOT MODIFY MANUALLY
import com.jetbrains.rhizomedb.*
import kotlin.reflect.KClass

@GeneratedEntityType(<!ARGUMENT_TYPE_MISMATCH!>String::class<!>)
data class MyEntity(override val eid: EID) : Entity

fun foo() {
    MyEntity.all()
    MyEntity.single()
    MyEntity.singleOrNull()
}
